--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<META HTTP-EQIV=REFRESH CONTENT="0; URL=reveal.js-master/index.html">
+		<meta http-equiv="refresh" content="0; url=reveal.js-master/index.html"/>
 	</head>
 </html>
