Started FAQ section

--- a/reveal.js-master/index.html
+++ b/reveal.js-master/index.html
@@ -280,7 +280,9 @@ Changes to be committed:
 	modified:   index.html
         deleted:    unnecessary_file
 $git commit -m "Removed unnecessary_file, and updated index"
-
+[master 2d1de69] Removed unnecessary_file, and updated index"
+1 file changed, 1 file deleted, 87 insertions(+), 8 deletions(-)
+$
 						</pre>
 					</section>
 				</section>
@@ -290,6 +292,9 @@ $git commit -m "Removed unnecessary_file, and updated index"
 						<h2>Git fetch</h2>
 						<code>$git fetch &lt;remote&gt; &lt;branch&gt;</code>
 						<p>Retrieves the state of &lt;branch&gt; in the remote repository &lt;remote&gt; which can then be compared with the local repository</p>
+					</section>
+					<section>
+						<p>Git fetch should be used to check what has changed outside of your own machine</p>
 					</section>
 				</section>
 
@@ -441,6 +446,11 @@ $git commit -m "Removed unnecessary_file, and updated index"
 						<h2>Summary</h2>
 						<p>The most widely used workflow for Git. It combines the other workflows into a secure and useable form that allows trusted users to edit the primary repository while still allowing for open contribution and ensuring good coding practices by encouraging code review. Just remember to create a different branch before making a pull request so you don't get stuck.</p>
 					</section>
+				</section>
+				<section>
+					<h2>FAQ</h2>
+					<h3>Frequently asked questions, and concerns</h3>
+					<p>Q: </p>
 				</section>
 
 			</div>
