--- a/reveal.js-master/index.html
+++ b/reveal.js-master/index.html
@@ -231,8 +231,8 @@ refs
 						<pre>
 $git status
 Changes not staged for commit:
-  (use "git add <file>..." to update what will be committed)
-  (use "git checkout -- <file>..." to discard changes in working directory)
+  (use "git add &lt;file&gt;..." to update what will be committed)
+  (use "git checkout -- &lt;file&gt;..." to discard changes in working directory)
 
 	modified:   index.html
 
@@ -244,7 +244,7 @@ $git add index.html; git status;
 On branch master
 Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
-  (use "git reset HEAD <file>..." to unstage)
+  (use "git reset HEAD &lt;file&gt;..." to unstage)
 
 	modified:   index.html
 						</pre>
@@ -287,7 +287,7 @@ $git status
 On branch master
 Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
-  (use "git reset HEAD <file>..." to unstage)
+  (use "git reset HEAD &lt;file&gt;..." to unstage)
 
 	modified:   index.html
         deleted:    unnecessary_file
@@ -349,7 +349,8 @@ $
 						<p> One of the most feared terms in version control is 'merge conflict'. Don't automatically delete your repo though. We can still work through this</p>
 					</section>
 					<section>
-						<h4>I'll do this example in the presentation <small> but I should add an example later</small>
+						<h4>I'll do this example in the presentation <small> but I should add an example later</small></h4>
+					</section>
 				</section>
 
 				<section>
