Fixed the git commit slide to remove nonexistent options

--- a/reveal.js-master/index.html
+++ b/reveal.js-master/index.html
@@ -278,7 +278,7 @@ Changes to be committed:
 				<section>
 					<section>
 						<h2>Git commit</h2>
-						<code>$git commit &lt;remote&gt; &lt;branch&gt;</code>
+						<code>$git commit </code>
 						<p>Makes a "save" of the currently staged changes</p>
 					</section>
 					<section>
@@ -329,7 +329,7 @@ $
 				<section>
 					<section>
 						<h2>Git reset</h2>
-						<code>$git reset --hard &lt;commit-sha&gt;</code>
+						<code>$git reset &lt;commit-sha&gt;</code>
 						<p>Bring head back to a specific commit or HEAD(gets rid of all staged changes)</p>
 						<code>$git reset &lt;file&gt;</code>
 						<p>Unstages a file that is staged for commit</p>
